# TuxPlayerX

./: .gitignore  DISCLAIMER.md  EPG_TIME_CORRECTION.md  LICENSE  NATIVE_VLC_ENGINE.md  README.md  VLC_BRIDGE.md  build_all.sh  clean_tauri_cache.sh  index.html  package-lock.json  package.json  pip.html  requirements.txt  run_dev.sh  vite.config.ts
app/: __init__.py  config.py  database.py  github_update.py  main.py  version.py  vlc_check.py
app/providers/: __init__.py  m3u_provider.py  mac_provider.py
app/ui/: about_page.py  main_window.py  player_widget.py  settings_page.py  subscriptions_page.py  theme.py
packaging/deb/: README.md
packaging/windows/: tuxplayerx.iss
scripts/: build_all.sh  build_deb.sh  build_linux.sh  build_windows.ps1  clean_tauri_cache.sh  install_linux_dev_deps.sh  run_dev.sh  sync-version.mjs
src/: App.tsx  pip.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: db.rs  main.rs  models.rs  providers.rs
src/components/: AboutView.tsx  PlayerView.tsx  SettingsView.tsx  Sidebar.tsx  SubscriptionsView.tsx  VideoSurface.tsx
src/lib/: api.ts  appMeta.ts  types.ts  utils.ts
src/styles/: globals.css
